corrected color more readable

--- a/html/styles.scss
+++ b/html/styles.scss
@@ -266,7 +266,7 @@ pre.text, pre.sourceCode, .cell-output pre {
     //font-family: $footer-font-family;
 
     a {
-        color: $orange;
+        color: $old-orange;
     }
 
     .faux-block {
